# meta-sonata

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
docs/: guide.md
docs/assets/: ATTRIBUTION.md
scripts/: render_cli_demo.py
src/meta_sonata/: __init__.py  album_parser.py  cli.py  cover.py  grouping.py  lyrics.py  matching.py  models.py  planner.py  providers.py  resolver.py  safety.py  scanner.py  state.py  tag_hints.py  tag_writer.py  web.py
tests/: README.md  test_album_parser.py  test_cli.py  test_enrich_cli.py  test_grouping.py  test_lyrics.py  test_matching.py  test_planner.py  test_providers.py  test_resolver.py  test_safety.py  test_scanner.py  test_state.py  test_tag_hints.py  test_web.py
