[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "meta-sonata"
version = "0.1.0"
description = "Music metadata automation toolkit for album libraries and tagging workflows."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "sendingE" }]
keywords = ["music", "metadata", "tagging", "lyrics", "musicbrainz"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
  "mutagen>=1.47",
  "opencc-python-reimplemented>=0.1.7",
  "platformdirs>=4.0",
]

[project.urls]
Homepage = "https://github.com/sendingE/meta-sonata"
Repository = "https://github.com/sendingE/meta-sonata"
Issues = "https://github.com/sendingE/meta-sonata/issues"

[project.scripts]
meta-sonata = "meta_sonata.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
